# libosmium

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
examples/: buffer.rs  measure.rs
src/: area.cpp  area.rs  buffer.rs  handler.cpp  handler.rs  item.rs  lib.rs  libosmium.cpp  location.rs  node.cpp  node.rs  node_ref_list.cpp  node_ref_list.rs  object.cpp  object.rs  tag_list.cpp  tag_list.rs  way.cpp  way.rs
