[package]
name = "libosmium"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Rust binding and wrapper for libosmium"
homepage = "https://github.com/gammelalf/libosmium"
repository = "https://github.com/gammelalf/libosmium"
readme = "README.md"
keywords = ["api", "osm"]
categories = ["api-bindings"]
include = [
	"libosmium/include/*",
	"libosmium/LICENSE",
	"src/*",
	"build.rs",
	"Cargo.toml",
	"LICENSE",
]
build = "build.rs"
links = "z"

[build-dependencies]
cc = "1.0"

[dependencies]
serde = { version = "~1.0", features = ["derive"], optional = true }

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"], default-features = false }
